<?xml version="1.0" encoding="utf-8"?>
<eightbitlab.com.blurview.BlurView
    android:id="@+id/blurView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:id="@+id/conflict_dialog_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin">

    <com.goodwy.commons.views.MyTextView
        android:id="@+id/conflict_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogTitleStyle"
        tools:text="File already exists"/>

    <RadioGroup
        android:id="@+id/conflict_dialog_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin">

        <com.goodwy.commons.views.MyCompatRadioButton
            android:id="@+id/conflict_dialog_radio_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/skip"/>

        <com.goodwy.commons.views.MyCompatRadioButton
            android:id="@+id/conflict_dialog_radio_overwrite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/overwrite"/>

        <com.goodwy.commons.views.MyCompatRadioButton
            android:id="@+id/conflict_dialog_radio_merge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/merge"/>

        <com.goodwy.commons.views.MyCompatRadioButton
            android:id="@+id/conflict_dialog_radio_keep_both"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/keep_both"/>

    </RadioGroup>

    <include
        android:id="@+id/conflict_dialog_divider"
        layout="@layout/divider" />

    <com.goodwy.commons.views.MyAppCompatCheckbox
        android:id="@+id/conflict_dialog_apply_to_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/apply_to_all"/>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogButtonContainerStyle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negative_button"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/cancel"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive_button"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_weight="0"
            android:text="@string/ok"
            android:visibility="visible" />

    </LinearLayout>
</LinearLayout>
</eightbitlab.com.blurview.BlurView>
