<?xml version="1.0" encoding="utf-8"?>
<eightbitlab.com.blurview.BlurView
    android:id="@+id/blurView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.goodwy.commons.views.MyTextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            style="@style/DialogTitleStyle"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/dialog_custom_interval_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="400dp">

        <LinearLayout
            android:id="@+id/dialog_custom_interval_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin">

        <com.goodwy.commons.views.MyTextInputLayout
            android:id="@+id/dialog_custom_interval_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_custom_interval_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="5"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/bigger_text_size" />

        </com.goodwy.commons.views.MyTextInputLayout>

        <RadioGroup
            android:id="@+id/dialog_radio_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin">

            <com.goodwy.commons.views.MyCompatRadioButton
                android:id="@+id/dialog_radio_seconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_margin"
                android:paddingBottom="@dimen/activity_margin"
                android:text="@string/seconds_raw" />

            <com.goodwy.commons.views.MyCompatRadioButton
                android:id="@+id/dialog_radio_minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_margin"
                android:paddingBottom="@dimen/activity_margin"
                android:text="@string/minutes_raw" />

            <com.goodwy.commons.views.MyCompatRadioButton
                android:id="@+id/dialog_radio_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_margin"
                android:paddingBottom="@dimen/activity_margin"
                android:text="@string/hours_raw" />

            <com.goodwy.commons.views.MyCompatRadioButton
                android:id="@+id/dialog_radio_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_margin"
                android:paddingBottom="@dimen/activity_margin"
                android:text="@string/days_raw" />

        </RadioGroup>
    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogButtonContainerStyle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negative_button"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive_button"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:visibility="visible" />

    </LinearLayout>
</LinearLayout>
</eightbitlab.com.blurview.BlurView>
