<?xml version="1.0" encoding="utf-8"?>
<eightbitlab.com.blurview.BlurView
    android:id="@+id/blurView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<com.goodwy.commons.views.MyScrollView
    android:id="@+id/dialog_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/dialog_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/dialog_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/medium_margin">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pattern"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin"/>
        </com.google.android.material.tabs.TabLayout>

        <com.goodwy.commons.views.MyDialogViewPager
            android:id="@+id/dialog_tab_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_tab_layout"/>
    </RelativeLayout>
</com.goodwy.commons.views.MyScrollView>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogButtonContainerStyle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negative_button"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/cancel"
            android:visibility="visible" />

    </LinearLayout>
</eightbitlab.com.blurview.BlurView>
