<?xml version="1.0" encoding="utf-8"?>
<eightbitlab.com.blurview.BlurView
    android:id="@+id/blurView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:id="@+id/enter_password_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <com.goodwy.commons.views.MyTextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogTitleStyle"
        android:visibility="gone" />

    <com.goodwy.commons.views.MyTextInputLayout
        android:id="@+id/enter_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/normal_text_size" />

    </com.goodwy.commons.views.MyTextInputLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogButtonContainerStyle"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negative_button"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive_button"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:text="@string/ok"
            android:visibility="visible" />

    </LinearLayout>
</LinearLayout>
</eightbitlab.com.blurview.BlurView>
