<?xml version="1.0" encoding="utf-8"?>
<eightbitlab.com.blurview.BlurView
    android:id="@+id/blurView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.goodwy.commons.views.MyTextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            style="@style/DialogTitleStyle"
            android:visibility="gone" />
    </RelativeLayout>

<LinearLayout
    android:id="@+id/write_permissions_dialog_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <com.goodwy.commons.views.MyTextView
        android:id="@+id/write_permissions_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:text="@string/confirm_storage_access_text"/>

    <ImageView
        android:id="@+id/write_permissions_dialog_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.goodwy.commons.views.MyTextView
        android:id="@+id/write_permissions_dialog_text_sd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/confirm_storage_access_text_sd"/>

    <ImageView
        android:id="@+id/write_permissions_dialog_image_sd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogButtonContainerStyle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive_button"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:visibility="visible" />

    </LinearLayout>
</LinearLayout>
</eightbitlab.com.blurview.BlurView>
